# ROB_Projekt

./: .gitignore  README.md  links_rechts  stl_converter.py  triangle.cpp  triangle.py  triangle_v3.py  triangle_v4.py  utils.py  utils_v2.py  vis_test.py
cpp_impl/: CMakeLists.txt  triangle_cpp.cpp  triangle_point_dist.cpp
cpp_impl/header/: force_distance.h
cpp_impl/header/stl_reader-master/docs/: jquery.js
cpp_impl/header/stl_reader-master/tests/: CMakeLists.txt
meshes/: Test ROB Proj v2.stl  cube.stl  rob3.off  rob3.stl  rob3ascii.stl
old_versions/: stl_converter.py  triangle.py  triangle_v2.py  triangle_v3.py  utils.py  vector_plot.py
paper/: ROB_Projekt.bib  paper 2.aux  paper 2.bcf  paper.aux  paper.bbl  paper.bcf  paper.blg  paper.fdb_latexmk  paper.fls  paper.run.xml  paper.tex
visualization/: vis_test.py
